# serial-ports-rs

./: Cargo.toml  README.md
examples/: list_ports.rs
src/: lib.rs  linux.rs  macos.rs
