[package]
name = "serial_ports"
version = "0.1.1"
authors = ["Dave Hylands <dhylands@gmail.com>"]

[dependencies]
clippy = { version = "*", optional = true }
libc = "0.2"
cfg-if = "*"

[target.'cfg(target_os = "linux")'.dependencies]
glob = "*"

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = { git = "https://github.com/dhylands/iokit-sys", rev = "256dadec3b63ecd85467ada1d4ada8e90ac9ce53" }	# Until PR is merged
mach = "*"
CoreFoundation-sys = "*"

[features]
#default=["clippy"]	# Requires nightly (you can also use cargo run --features clippy)
default=[]		# Use this one for stable
