[package]
name = "serial_ports"
version = "0.1.1"
authors = ["Dave Hylands <dhylands@gmail.com>"]

[dependencies]
clippy = { version = "*", optional = true }
libc = "0.2"
cfg-if = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "^0.1.4"
mach = "^0.0.5"
CoreFoundation-sys = "^0.1.3"

[features]
#default=["clippy"]	# Requires nightly (you can also use cargo run --features clippy)
default=[]		# Use this one for stable
